# AI_Assistant

./: .gitignore  pyproject.toml
src/: application_manager.py  main.py  office_operations.py  screenshot_logger.py  slideshow_creator.py  utils.py  web_navigator.py
